[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/Assets/SpaceShooter/Arwing/Arwing.obj" type="ArrayMesh" id=1]
[ext_resource path="res://src/Assets/SpaceShooter/Laser2.wav" type="AudioStream" id=2]
[ext_resource path="res://src/Assets/Scenes/AfterburnParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Assets/Scripts/player.gd" type="Script" id=5]
[ext_resource path="res://src/Assets/SpaceShooter/crosshair2.png" type="Texture" id=6]
[ext_resource path="res://src/Assets/SpaceShooter/crosshair1.png" type="Texture" id=7]

[sub_resource type="BoxShape" id=1]

[node name="player" type="KinematicBody" groups=["Player"]]
script = ExtResource( 5 )

[node name="Particles" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.865564, 2.04383 )

[node name="PlayerMesh" type="MeshInstance" parent="."]
transform = Transform( -3, 0, -3.01992e-07, 0, 2, 0, 4.52987e-07, 0, -2, 0, 0, 0 )
mesh = ExtResource( 1 )

[node name="Gun1" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 5 )

[node name="Gun2" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 5 )

[node name="Crosshair" type="Sprite3D" parent="."]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, -250 )
billboard = 1
texture = ExtResource( 6 )

[node name="Crosshair2" type="Sprite3D" parent="."]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, -60 )
billboard = 1
texture = ExtResource( 7 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_db = 8.496

[node name="Area" type="Area" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0 )
shape = SubResource( 1 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
